# p4mcp-server

./: .gitignore  Dockerfile  LICENSE.txt  README.md  THIRD-PARTY-NOTICES.txt  build.bat  build.sh  p4-mcp-server.spec  pyproject.toml  requirements.txt  server.json
.github/workflows/: github-to-jira.yml  publish-testpypi.yml  publish.yml  upload_github_traffic.yml
scripts/: upload_github_traffic.py
skills/p4-changelist-management/: SKILL.md
skills/p4-code-review/: SKILL.md
skills/p4-file-operations/: SKILL.md
skills/p4-stream-workflows/: SKILL.md
skills/p4-workspace-setup/: SKILL.md
src/: __main__.py  main.py  server.py
src/core/: config.py  connection.py  logging.py  schema_utils.py  ssl_config.py
src/handlers/: __init__.py  changelist_handlers.py  file_handlers.py  handlers.py  job_handlers.py  review_handlers.py  server_handlers.py  shelve_handlers.py  stream_handlers.py  utils.py  workspace_handlers.py
src/logging/: global_logging.py  session_logging.py
src/middleware/: check_permission.py
src/models/: changelist_models.py  common.py  file_models.py  job_models.py  models.py  review_models.py  server_models.py  shelve_models.py  stream_models.py  workspace_models.py
src/services/: changelist_services.py  file_services.py  job_services.py  review_services.py  server_services.py  shelve_services.py  stream_services.py  workspace_services.py
src/telemetry/: consent.py  consent_ui.py  upload_logs.py
src/tools/: __init__.py  changelist_tools.py  common.py  file_tools.py  job_tools.py  review_tools.py  server_tools.py  shelve_tools.py  (+2 more)
